--- a/Auth-Firebase/Auth-Firebase/Base.lproj/Main.storyboard
+++ b/Auth-Firebase/Auth-Firebase/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -28,7 +29,7 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="tVa-gR-Dfn">
                                                 <rect key="frame" x="0.0" y="72.666666666666686" width="316.33333333333331" height="47.333333333333343"/>
                                                 <subviews>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите логин или Email" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="Ewj-NB-I3y">
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите логин или Email" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="Ewj-NB-I3y">
                                                         <rect key="frame" x="0.0" y="0.0" width="316.33333333333331" height="47.333333333333336"/>
                                                         <color key="tintColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <color key="textColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -42,6 +43,7 @@
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите пароль" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="A5o-3t-XeI">
                                                         <rect key="frame" x="0.0" y="0.0" width="316.33333333333331" height="47.666666666666664"/>
+                                                        <color key="tintColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <color key="textColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="continue" secureTextEntry="YES" textContentType="password"/>
@@ -60,6 +62,9 @@
                                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="baseBackgroundColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="pressedBtnEnter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pdy-MN-pF6"/>
+                                                </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Или используйте другой способ:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="5Fk-y6-5ZU">
                                                 <rect key="frame" x="0.0" y="290" width="316.33333333333331" height="47.666666666666686"/>
@@ -70,14 +75,32 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="m1P-lr-fI4">
                                                 <rect key="frame" x="0.0" y="362.66666666666663" width="316.33333333333331" height="47.333333333333314"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="faceid" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bav-5x-Xed">
-                                                        <rect key="frame" x="0.0" y="1.3333333333333321" width="153" height="45.333333333333336"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mrg-Vj-tof">
+                                                        <rect key="frame" x="0.0" y="0.0" width="153" height="47.333333333333336"/>
                                                         <color key="tintColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    </imageView>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoGoogle" translatesAutoresizingMaskIntoConstraints="NO" id="tja-Lw-91Y">
+                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                        <state key="normal" title="Button">
+                                                            <imageReference key="backgroundImage" image="faceid" catalog="system" symbolScale="default"/>
+                                                        </state>
+                                                        <buttonConfiguration key="configuration" style="plain">
+                                                            <backgroundConfiguration key="background" imageContentMode="scaleAspectFit">
+                                                                <imageReference key="image" image="faceid" catalog="system" symbolScale="large"/>
+                                                            </backgroundConfiguration>
+                                                        </buttonConfiguration>
+                                                        <connections>
+                                                            <action selector="pressedBtnBiometry:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Mg0-FT-kNd"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aXJ-n7-wjQ">
                                                         <rect key="frame" x="163" y="0.0" width="153.33333333333337" height="47.333333333333336"/>
-                                                        <color key="tintColor" red="0.83677323609999998" green="0.99755543469999997" blue="0.16165398049999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                    </imageView>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain">
+                                                            <backgroundConfiguration key="background" image="logoGoogle" imageContentMode="scaleAspectFit"/>
+                                                        </buttonConfiguration>
+                                                        <connections>
+                                                            <action selector="pressedBtnGoogle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y4W-uF-XAc"/>
+                                                        </connections>
+                                                    </button>
                                                 </subviews>
                                             </stackView>
                                         </subviews>
@@ -110,11 +133,27 @@
                     <connections>
                         <outlet property="loginField" destination="Ewj-NB-I3y" id="geo-Yt-fju"/>
                         <outlet property="passwordField" destination="A5o-3t-XeI" id="e6M-4n-JVt"/>
+                        <segue destination="FsP-BB-VLt" kind="presentation" identifier="goToNotes" id="3de-Mt-guD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="19.626168224299064" y="81.641468682505405"/>
+            <point key="canvasLocation" x="65" y="92"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="qA7-hE-ChN">
+            <objects>
+                <viewController id="FsP-BB-VLt" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FPE-Mg-FT5">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="2pu-ei-sVc"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hec-6Y-Lu6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="805" y="92"/>
         </scene>
     </scenes>
     <resources>
@@ -123,6 +162,9 @@
         <image name="logoGoogle" width="24" height="24"/>
         <systemColor name="placeholderTextColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
